trunk/Archive2/0f/8125a84eb27757/output
main.cpp: In function 'int main()':
main.cpp:18:16: error: 'stoi' is not a member of 'std'
         sum += std::stoi(line);
                ^
